# geometry

./: .gitignore  .spell_ignore  .travis.yml  Makefile  NOTES.md  README.md  cran-comments.md  tidy-config
pkg/: DESCRIPTION  LICENSE  NAMESPACE  NEWS  TODO  configure  configure.ac
pkg/.aspell/: defaults.R  geometry.rds
pkg/R/: RcppExports.R  Unique.R  cart2pol.R  cart2sph.R  convhulln.R  delaunayn.R  disthulln.R  distmesh2d.R  distmeshnd.R  dotprod.R  entry.value.R  extprod3d.R  halfspacen.R  inhulln.R  intersectn.R  matmax.R  matorder.R  mesh.dcircle.R  mesh.diff.R  mesh.drectangle.R  mesh.dsphere.R  mesh.hunif.R  pol2cart.R  polyarea.R  qhull-options.R  rbox.R  sph2cart.R  surf.tri.R  tetramesh.R  trimesh.R  tsearch.R
pkg/demo/: 00Index
pkg/inst/: WORDLIST
pkg/man/: Unique.Rd  as.mesh3d.Rd  bary2cart.Rd  cart2bary.Rd  cart2pol.Rd  cart2sph.Rd  convhulln.Rd  delaunayn.Rd  disthulln.Rd  distmesh2d.Rd  distmeshnd.Rd  dot.Rd  entry.value.Rd  extprod3d.Rd  feasible.point.Rd  halfspacen.Rd  inhulln.Rd  intersectn.Rd  matmax.Rd  mesh.dcircle.Rd  mesh.diff.Rd  mesh.drectangle.Rd  mesh.dsphere.Rd  mesh.functions.Rd  mesh.hunif.Rd  pol2cart.Rd  polyarea.Rd  rbox.Rd  sph2cart.Rd  surf.tri.Rd  tetramesh.Rd  to.mesh3d.Rd  trimesh.Rd  tsearch.Rd  tsearchn.Rd
pkg/src/: Makevars  Makevars.in  Makevars.win  QuadTree.cpp  QuadTree.h  Rconvhulln.c  RcppExports.cpp  Rdelaunayn.c  Rgeometry.c  Rgeometry.h  Rhalfspacen.c  Rinhulln.c  Rtsearch.c  Rtsearch.cpp  Rtsearch_orig.c  Rtsearchn.c  delaunayn.c  geometry_init.c  global.c  global_r.c  io.c  io_r.c  libqhull_r.h  mem.h  (+17 more)
(+103 files in other folders)
